--- a/bitcoin.html
+++ b/bitcoin.html
@@ -24,7 +24,7 @@
           
          
   
-          //From 
+          //From DesignCourse
           function getBTC(){
               var price = document.querySelector('h1')
               axios.get('https://min-api.cryptocompare.com/data/price?fsym=BTC&tsyms=USD')
