--- a/litecoin.html
+++ b/litecoin.html
@@ -22,7 +22,7 @@
         const BrowserWindow = electron.remote.BrowserWindow
         const path = require('path')
 
-
+        //From DesignCourse
         function getLTC(){
             var price = document.querySelector('h1')
             axios.get('https://min-api.cryptocompare.com/data/price?fsym=LTC&tsyms=USD')
