--- a/litecoin.html
+++ b/litecoin.html
@@ -11,7 +11,7 @@
           <h1 id="ltcprice">...</h1>
         </div>
           <form id = "converter">
-            <input type="text" name="toConvert" placeholder="LTC Amount">
+            <input type="text" name="toConvert" placeholder="Amount">
           </form>
           <button onclick = "ltcusd()">LTC => $</button><button onclick = "usdltc()">$ => LTC</button>
           <u><h2 id = "result">___</h2></u>
@@ -22,7 +22,7 @@
         const BrowserWindow = electron.remote.BrowserWindow
         const path = require('path')
 
-        //From DesignCourse
+        //From https://www.youtube.com/watch?v=2RxHQoiDctI&t=1s
         function getLTC(){
             var price = document.querySelector('h1')
             axios.get('https://min-api.cryptocompare.com/data/price?fsym=LTC&tsyms=USD')
